Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="CSG (UMD) : Class Schedule Generator">
+    <title>CSG (UMD) by msilva12</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>CSG (UMD)</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>CSG (UMD)</h1>
+        <p>Class Schedule Generator</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/msilva12/CSG">View on GitHub</a>
+        <p class="view"><a href="https://github.com/msilva12/CSG">View the Project on GitHub <small>msilva12/CSG</small></a></p>
 
-          <h1 id="project_title">CSG (UMD)</h1>
-          <h2 id="project_tagline">Class Schedule Generator</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/msilva12/CSG/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/msilva12/CSG/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/msilva12/CSG/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/msilva12/CSG/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/msilva12/CSG">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a id="class-schedule-generator" class="anchor" href="#class-schedule-generator" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Class Schedule Generator</h1>
 
@@ -58,17 +55,12 @@ from the course listing and create an array of possible schedules.</p>
 
 <p>• Display possible combinations in a calendar style.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">CSG (UMD) maintained by <a href="https://github.com/msilva12">msilva12</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/msilva12">msilva12</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
