Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,14 +46,11 @@ from the course listing and create an array of possible schedules.</p>
 
 <p>3 Sort the classes found in a two dimensional array.</p>
 
-<h4>
-<a id="things-that-still-need-work" class="anchor" href="#things-that-still-need-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Things that still need work:</h4>
+<p>4 Create all combinational matrices.</p>
 
-<p>• Create all the possible combinations matrix.</p>
+<p>5 Filter time conflicting combinations.</p>
 
-<p>• Check for overlapping classes in each combination, if overlap occurs discard combination.</p>
-
-<p>• Display possible combinations in a calendar style.</p>
+<p>6 Export all non-conflicting combinations to excel in an agent view.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/msilva12">msilva12</a></p>
